correct height on devices

--- a/style/style.scss
+++ b/style/style.scss
@@ -124,3 +124,15 @@ h1 {
       transform: rotate(360deg);
     }
   }
+  @media screen and (min-height:600px) and (max-height:700px){
+    .flexColumn{
+        height:100vh;
+    }
+    .picContainer{
+        margin-top:2rem;
+    }
+    .linkContainer{
+        margin-top:0rem;
+        gap:2rem;
+    }
+  }
