--- a/style/style.scss
+++ b/style/style.scss
@@ -72,7 +72,7 @@ h1 {
 }
 .linkContainer a{
     background-color:white;
-    padding:10px 60px;
+    padding:1px 45px;
     border: 1px solid rgba(255,255,255,0.8);
     border-radius:50px;
     transition:all 0.5s ease;
@@ -81,7 +81,7 @@ h1 {
     color:black;
     &:hover{
         cursor:pointer;
-        padding:20px 80px;
+        padding:3px 60px;
     }
 }
 @media screen and (max-width:400px){
@@ -135,4 +135,7 @@ h1 {
         margin-top:0rem;
         gap:2rem;
     }
+  }
+  h3{
+    font-size:1rem;
   }
